# mdbook-inpage-tab

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: pr.yml  release.yml
src/: lib.rs  main.rs  tab.rs
test/: book.toml
test/src/: chapter_1.md
test/theme/: inpage-tab.css
