[package]
name = "mdbook-inpage-tab"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
clap = { version = "4.5.36", default-features = false }
mdbook = { version = "0.4.48", default-features = false }
regex = { version = "1.11.1", default-features = false }
semver = { version = "1.0.26", default-features = false, features = ["std"] }
serde_json = { version = "1.0.140", default-features = false }
