[package]
name = "mdbook-inpage-tab"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.101", default-features = false }
clap = { version = "4.5.58", default-features = false, features = ["std"] }
mdbook-preprocessor = { version = "0.5.2", default-features = false }
regex = { version = "1.12.3", default-features = false }
semver = { version = "1.0.27", default-features = false, features = ["std"] }
serde_json = { version = "1.0.149", default-features = false }
